--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/runtime": "^7.7.7",
     "babel-polyfill": "^6.26.0",
     "parcel-bundler": "^1.12.4",
+    "pretty-checkbox-vue": "^1.1.9",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4",
     "vue-select": "^3.4.0"
