--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "babel-polyfill": "^6.26.0",
+    "chart.js": "^2.9.3",
     "parcel-bundler": "^1.12.4",
     "pretty-checkbox-vue": "^1.1.9",
     "vue": "^2.6.11",
